manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steamuserapi-ingress
  namespace: steamuserapi
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: web,websecure
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
  tls:
    - hosts:
      - localhost
      secretName: nginx-secret
